src/app/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    /* @apply bg-breadgray-grey100;
    @apply text-breadgray-white; */
    @apply font-redhat;
  }

  .AccordionTrigger[data-state="open"] > .AccordionChevron {
    transform: rotate(180deg);
  }

  [data-state="open"] > .caret-down {
    transform: rotate(-180deg);
  }
}
@layer components {
  .swap-drop-shadow {
    box-shadow: 0px 5px 50px 0px rgba(0, 0, 0, 0.25);
  }
  .dark .swap-drop-shadow {
    box-shadow: none;
  }

  .token-label-shadow {
    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
  }
  .dark .token-label-shadow {
    box-shadow: none;
  }

  .add-token-shadow {
    box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.25);
  }

  .dark .add-token-shadow {
    box-shadow: none;
  }

  .guild-logo {
    display: block;
  }

  .dark .guild-logo {
    display: none;
  }

  .guild-logo-dark {
    display: none;
  }

  .dark .guild-logo-dark {
    display: block;
  }
  .supply-text-gradient {
    background: linear-gradient(
      230deg,
      #b72085 9.16%,
      #cd19aa 16.07%,
      #c463ca 35.44%,
      #f5ac37 50.56%,
      #f9c625 73.38%,
      #ffe70f 95.3%
    );
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .total-supply-border {
    background: linear-gradient(canvas, canvas),
      linear-gradient(120deg, hsl(278, 44%, 73%), hsl(35, 81%, 73%));
    border: 4px solid transparent;
    background-clip: padding-box, border-box;
  }

  .supply-light {
    transform-origin: center;
    animation-name: supply-light-animation;
    animation-duration: 2.5s;
    animation-iteration-count: infinite;
  }

  @keyframes supply-light-animation {
    0% {
      transform: scale(100%);
      opacity: 1;
    }
    20% {
      transform: scale(100%);
      opacity: 1;
    }
    45% {
      transform: scale(0%);
      opacity: 0;
    }
    55% {
      transform: scale(0%);
      opacity: 0;
    }
    80% {
      transform: scale(100%);
      opacity: 1;
    }
    100% {
      transform: scale(100%);
      opacity: 1;
    }
  }

  .spinner_QPB9 {
    transform-origin: center;
    animation: spinner_4N1C 2s linear infinite;
  }
  .spinner_QPB9 circle {
    stroke-linecap: round;
    animation: spinner_MX3P 1.5s ease-in-out infinite;
  }
  @keyframes spinner_4N1C {
    100% {
      transform: rotate(360deg);
    }
  }
  @keyframes spinner_MX3P {
    0% {
      stroke-dasharray: 0 150;
      stroke-dashoffset: 0;
    }
    47.5% {
      stroke-dasharray: 42 150;
      stroke-dashoffset: -16;
    }
    95%,
    100% {
      stroke-dasharray: 42 150;
      stroke-dashoffset: -59;
    }
  }
}

